# check-pytypes-annotations

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: check.yml
basic-any/: task.py
basic-dict/: task.py
basic-final/: task.py
basic-kwargs/: task.py
basic-list/: task.py
basic-optional/: task.py
basic-parameter/: task.py
basic-return/: task.py
basic-tuple/: task.py
basic-typealias/: task.py
basic-union/: task.py
basic-variable/: task.py
intermediate-await/: task.py
intermediate-callable/: task.py
intermediate-class-var/: task.py
intermediate-decorator/: task.py
intermediate-empty-tuple/: task.py
intermediate-generic/: task.py
intermediate-generic2/: task.py
intermediate-generic3/: task.py
intermediate-instance-var/: task.py
intermediate-literal/: task.py
intermediate-literalstring/: task.py
intermediate-self/: task.py
intermediate-typed-dict/: task.py
intermediate-typed-dict2/: task.py
intermediate-typed-dict3/: task.py
intermediate-unpack/: task.py
